--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,16 @@
 [metadata]
-name = example-pkg-YOUR-USERNAME-HERE
+name = hyper-python
 version = 0.0.1
-author = Example Author
-author_email = author@example.com
-description = A small example package
+author = Hyper
+author_email = support@hyper.co
+description = Python library for the Hyper API.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
-url = https://github.com/pypa/sampleproject
+url = https://github.com/meta-labs/hyper-python
 project_urls =
-    Documentation = https://docs.hyper.co/reference
+    Bug Documentation = https://docs.hyper.co/reference
     Source Code = https://github.com/meta-labs/hyper-python
-install_requirements =
-    requests >= 2.20; python_version >= '3.0'
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
